--- a/Did you drink water today?.html
+++ b/Did you drink water today?.html
@@ -26,6 +26,7 @@
         h1 {
             font-family: 'Fredoka One', cursive;
             font-size: 4rem;
+            
             margin-bottom: 20px;
             color: #fff;
             text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
@@ -52,6 +53,7 @@
 
         #counterValue {
             font-family: 'Fredoka One', cursive;
+            /*background: rgba(255, 255, 255, 0.2);*/
             font-size: 4rem;
             color: #00c8ff;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
